renesas/ra8e1: fix nsh sample

--- a/arch/arm/src/ra8/CMakeLists.txt
+++ b/arch/arm/src/ra8/CMakeLists.txt
@@ -18,6 +18,14 @@
 #
 # ##############################################################################
 
+# Add RA8-specific include paths
+
+target_include_directories(arch PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}/hardware
+  ${CMAKE_CURRENT_SOURCE_DIR}/hardware/ra8e1
+)
+
 # Required RA8 core files
 set(SRCS
     ra_start.c
