--- a/boards/arm/ra8/fpb-ra8e1/src/Makefile
+++ b/boards/arm/ra8/fpb-ra8e1/src/Makefile
@@ -20,14 +20,28 @@
 
 include $(TOPDIR)/Make.defs
 
+# Core board initialization files
 CSRCS = ra8e1_boot.c ra8e1_bringup.c ra8e1_app_init.c
+CSRCS += fpb_ra8e1_boardinitialize.c
 
+# Application initialization
+ifeq ($(CONFIG_BOARDCTL),y)
+CSRCS += ra8e1_appinit.c
+endif
+
+# UART/SCI initialization
+ifeq ($(CONFIG_RA_SCI_UART),y)
+CSRCS += ra8e1_uart_initialize.c
+endif
+
+# LED support
 ifeq ($(CONFIG_ARCH_LEDS),y)
 CSRCS += ra8e1_auto_leds.c
 else
 CSRCS += ra8e1_user_leds.c
 endif
 
+# Button/Switch support  
 ifeq ($(CONFIG_RA8E1_SWITCH),y)
 CSRCS += ra8e1_buttons.c
 endif
@@ -36,7 +50,7 @@ endif
 # Peripheral initialization, User Driver interfaces on FPB-RA8E1
 ############################################################################
 ifeq ($(CONFIG_RA_SPI),y)
-CSRCS += ra8e1_spi.c
+CSRCS += ra8e1_spi_initialize.c
 endif
 
 ############################################################################
